# EmbeddedMatcher

./: .gitignore  README.md  connecttest.py  main.py  openai_embed.py  pyproject.toml  summary.ipynb  test.py
src/: cleaner.py  cosine_similarity.py  data_preprocessing.py  main.py  scoring.py  synonym_matching.py  utils.py  validation_metrics.py
tests/: __init__.py  test_cosine_similarity.py  test_data_preprocessing.py  test_main.py  test_scoring.py  test_synonym_matching.py  test_utils.py
